--- a/genetic_optimization.ipynb
+++ b/genetic_optimization.ipynb
@@ -91,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_diet(N_FOODS=6,exclude_food_ids=[],metric_nutrients=[208],metric_weights=[1]):\n",
+    "def find_diet(N_FOODS=6,exclude_food_ids=[],include_food_ids=[],metric_nutrients=[208],metric_weights=[1]):\n",
     "    #\n",
     "    # Internal constants\n",
     "    #\n",
@@ -111,10 +111,18 @@
     "    # drop any foods that we passed in exclude list\n",
     "    #\n",
     "    if len(exclude_food_ids)>0:\n",
-    "        valid_drop=list(set(nutrients.index) & set(exclude)) # the food ids that are passed and are in the index\n",
+    "        valid_drop=list(set(nutrients.index) & set(exclude_food_ids)) # the food ids that are passed and are in the index\n",
     "        if len(valid_drop)>0:\n",
     "            nutrients.drop(index=valid_drop,inplace=True)\n",
     "    \n",
+    "    #\n",
+    "    # drop any foods that we passed in exclude list\n",
+    "    #\n",
+    "    if len(include_food_ids)>0:\n",
+    "        valid_keep=list(set(nutrients.index) & set(include_food_ids)) # the food ids that are passed and are in the index\n",
+    "        if len(valid_keep)>0:\n",
+    "            nutrients=nutrients.loc[valid_keep,:]\n",
+    "            \n",
     "    #\n",
     "    # Load food clusters\n",
     "    #\n",
@@ -152,16 +160,16 @@
     "    toolbox.register(\"evaluate\", evaluate, nut=nutrients,limt=limt,reqd=reqd,metric_nutrients=metric_nutrients,metric_weights=metric_weights)\n",
     "\n",
     "    # used to make a seed population (only) ; per: https://deap.readthedocs.io/en/master/tutorials/basic/part1.html?highlight=seeding#seeding-a-population\n",
-    "    toolbox.register(\"population_guess\", InitPopulation, list, creator.Individual, N_FOODS,Nclust,Nseed,limt,reqd,nutrients )\n",
+    "    toolbox.register(\"population_guess\", InitPopulation, list, creator.Individual, N_FOODS,Nclust,Nseed,clust )\n",
     "\n",
     "    stats = tools.Statistics(key=lambda ind: ind.fitness.values)\n",
     "    stats.register(\"min\", numpy.min)\n",
     "    stats.register(\"median\", numpy.median)\n",
     "    stats.register(\"max\", numpy.max)\n",
     "    \n",
-    "    pop = toolbox.population(n=300) # totally random initial population\n",
-    "    #pop = toolbox.population_guess()\n",
-    "    pop, logbook = algorithms.eaSimple(pop, toolbox, cxpb=0.5, mutpb=0.2, ngen=10,stats=stats, verbose=True)\n",
+    "    #pop = toolbox.population(n=300) # totally random initial population\n",
+    "    pop = toolbox.population_guess()\n",
+    "    pop, logbook = algorithms.eaSimple(pop, toolbox, cxpb=0.5, mutpb=0.2, ngen=50,stats=stats, verbose=True)\n",
     "    \n",
     "    # clean up\n",
     "    pool.close()\n",
@@ -172,7 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_sets=get_food_lists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,40 +197,31 @@
      "output_type": "stream",
      "text": [
       "[*] Loaded 4482 foods from database\n",
-      "[*] Found pickle file with 15 clusters and 4482 foods\n"
+      "[*] Found pickle file with 15 clusters and 4482 foods\n",
+      "error\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pedwards/miniconda3/envs/diet/lib/python3.7/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMin' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  RuntimeWarning)\n",
-      "/home/pedwards/miniconda3/envs/diet/lib/python3.7/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\tmin    \tmedian\tmax  \n",
-      "0  \t300   \t1382.52\t9e+09 \t9e+09\n",
-      "1  \t175   \t1363.79\t9e+09 \t9e+09\n",
-      "2  \t184   \t1151.89\t2306.4\t9e+09\n",
-      "3  \t168   \t1051.21\t1382.52\t9e+09\n",
-      "4  \t178   \t1031.95\t1318.64\t9e+09\n",
-      "5  \t162   \t1027.47\t1093.73\t9e+09\n",
-      "6  \t182   \t995.346\t1051.21\t9e+09\n",
-      "7  \t173   \t995.346\t1031.95\t9e+09\n",
-      "8  \t188   \t995.346\t1027.47\t9e+09\n",
-      "9  \t190   \t941.883\t995.346\t9e+09\n",
-      "10 \t187   \t941.883\t995.346\t9e+09\n"
+     "ename": "IndexError",
+     "evalue": "positional indexers are out-of-bounds",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/home/pedwards/miniconda3/envs/diet/lib/python3.7/multiprocessing/pool.py\", line 121, in worker\n    result = (True, func(*args, **kwds))\n  File \"/home/pedwards/miniconda3/envs/diet/lib/python3.7/multiprocessing/pool.py\", line 44, in mapstar\n    return list(map(*args))\n  File \"/home/pedwards/diet_ga/lib/libraries.py\", line 167, in evaluate\n    nt=nut.iloc[individual,:]\n  File \"/home/pedwards/miniconda3/envs/diet/lib/python3.7/site-packages/pandas/core/indexing.py\", line 925, in __getitem__\n    return self._getitem_tuple(key)\n  File \"/home/pedwards/miniconda3/envs/diet/lib/python3.7/site-packages/pandas/core/indexing.py\", line 1506, in _getitem_tuple\n    self._has_valid_tuple(tup)\n  File \"/home/pedwards/miniconda3/envs/diet/lib/python3.7/site-packages/pandas/core/indexing.py\", line 754, in _has_valid_tuple\n    self._validate_key(k, i)\n  File \"/home/pedwards/miniconda3/envs/diet/lib/python3.7/site-packages/pandas/core/indexing.py\", line 1424, in _validate_key\n    raise IndexError(\"positional indexers are out-of-bounds\")\nIndexError: positional indexers are out-of-bounds\n\"\"\"",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_43014/1102909023.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfind_diet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN_FOODS\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minclude_food_ids\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfood_sets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'veg_with_eggs_and_dairy'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselBest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mbest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_43014/869157127.py\u001b[0m in \u001b[0;36mfind_diet\u001b[0;34m(N_FOODS, exclude_food_ids, include_food_ids, metric_nutrients, metric_weights)\u001b[0m\n\u001b[1;32m     73\u001b[0m     \u001b[0;31m#pop = toolbox.population(n=300) # totally random initial population\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0mpop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtoolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopulation_guess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m     \u001b[0mpop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogbook\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malgorithms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meaSimple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoolbox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcxpb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmutpb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mngen\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m     \u001b[0;31m# clean up\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/diet/lib/python3.7/site-packages/deap/algorithms.py\u001b[0m in \u001b[0;36meaSimple\u001b[0;34m(population, toolbox, cxpb, mutpb, ngen, stats, halloffame, verbose)\u001b[0m\n\u001b[1;32m    148\u001b[0m     \u001b[0;31m# Evaluate the individuals with an invalid fitness\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[0minvalid_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mind\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mind\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpopulation\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m     \u001b[0mfitnesses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtoolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minvalid_ind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfit\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minvalid_ind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfitnesses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m         \u001b[0mind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/diet/lib/python3.7/multiprocessing/pool.py\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    266\u001b[0m         \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mthat\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mreturned\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    267\u001b[0m         '''\n\u001b[0;32m--> 268\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_map_async\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmapstar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    269\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    270\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstarmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/diet/lib/python3.7/multiprocessing/pool.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    655\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    656\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 657\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    658\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    659\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: positional indexers are out-of-bounds"
      ]
     }
    ],
    "source": [
-    "pop=find_diet(N_FOODS=6,exclude_food_ids=[])\n",
+    "pop=find_diet(N_FOODS=6,include_food_ids=food_sets['veg_with_eggs_and_dairy'])\n",
     "best=tools.selBest(pop, k=1)\n",
     "best=best[0]"
    ]
@@ -699,13 +707,6 @@
     "nutrient_report=A.join(nutrient_desc).join(nutrient_totals).set_index('name')\n",
     "nutrient_report"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
